--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="tagline">بثقة <b>الوالد</b>.. نصنع المستحيل</p>
         <div class="nav-links">
             <a href="https://www.tiktok.com/@s5bhub" target="_blank">تيك توك</a>
-            <a href="https://www.tryawtad.com/learn" target="_blank">منصة أوتاد</a>
+            <a href="https://www.tryawtad.com/learn" target="_blank">منصة أوتاد لتعلم البرمجة</a>
             <a href="https://www.virustotal.com" target="_blank">فحص الروابط</a>
         </div>
         <div class="code-section">
